--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ethers": "^5.6.8",
+    "moralis": "^1.8.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moralis": "^1.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
@@ -40,12 +43,13 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^4.6.0",
+    "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "chai": "^4.2.0",
     "dotenv": "^16.0.1",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
     "hardhat": "^2.9.9"
   }
 }
